Name:                hcron
Version:             0.0.0.3
License:             BSD3
License-file:        LICENSE
Author:              Timo B. Kranz
Maintainer:          Timo B. Kranz <me@tbk.name>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Control, Scheduling
Homepage:            http://github.com/tbh/hcron
Description:
  A simple job scheduler for Haskell, which just runs some IO () action at a given time.

  Currently almost all of this package is based on the excellent cron modules found in the
  BuildBox package by Ben Lippmeier.

Synopsis:
  A simple job scheduler, which just runs some IO action at a given time.

Tested-with:
        GHC == 7.0.3

Library
  Build-Depends: 
        base           >= 4      && < 5,
        containers     >= 0.5    && <  0.6,
        time           >= 1.6    && <= 1.7,
        directory      >= 1.3    && <= 1.4,
        mtl            >= 2.0    && <  3.0,
        old-locale     >= 1.0    && <  1.1,
        process        >= 1.4    && <  1.5,
        random         >= 1.1    && <  1.2,
        pretty         >= 1.0    && <  1.2,
        bytestring     >= 0.9    && <  1.0,
        stm            >= 2.4    && <  2.5

  ghc-options:
        -Wall

  Exposed-modules:
        HCron
        HCron.Schedule

  Other-modules:
